tests/pass/no-unimported-text-alias.tsx
import { Label as Text } from "@/components/ui/text";

const view = <Text />;
