tests/fail/no-unimported-text-shadowed.tsx
import { Text } from "@/components/ui/text";

function Example() {
    const Text = () => <span />;
    return <Text />;
}
